unpackaged/main/default/objects/Legal_Contract_Form__c/Legal_Contract_Form__c.object-meta.xml
<CustomObject>
    <label>Legal Contract Form</label>
    <nameField>
        <label>Legal Contract Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Contract Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>