unpackaged/main/default/objects/Legal_Contract_Form__c/fields/Application_Question_Set__c.field-meta.xml
<CustomField>
    <fullName>Application_Question_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Question Set</label>
    <referenceTo>Application_Question_Set__c</referenceTo>
    <relationshipLabel>Legal Contract Forms</relationshipLabel>
    <relationshipName>Legal_Contract_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>