unpackaged/main/default/objects/Legal_Contract_Form__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Contract_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>